# GatePETtoSTIR

./: CMakeLists.txt  GatePET2STIR.py  RootReadTest.py  conf.ini  file.root  test.hs  test.s
include/: deQTConfig.h.in  rootgen.h  utchain.h  utype.h
src/: main.cpp  rootgen.cpp  utchain.cpp
